@startuml

entity Project {
  +id: ProjectId
  +name: string
}

entity ProjectId {
  +code: string
}

entity Answer {
}

entity Question {
}

entity ProjectQuestion {
  +projectId: ProjectId
  +selectionStrategy: SelectionStrategy
  +selectedAnswers: Set<Answer>
  +selectAnswer(answer): Question
  +deselectAnswer(answer): Question
}

entity SelectionStrategy {
  +selectAnswer(question, answer): SelectableQuestion
  +deselectAnswer(question, answer): SelectableQuestion
}

entity SelectionStrategyImpl {
}

entity ProjectFactory {
  +createProject(projectId, name): Project
}

entity QuestionFactory {
  +createQuestion(questionId, text, questionType,
  availableAnswers, selectedAnswers, actionNeeded)
  +createBooleanQuestion(id, text, actionNeeded): Question
}

entity QuestionnaireService {
  +createQuestionnaire(projectId)
  +getNthQuestion(projectId, n): Question
}

Project *-- ProjectId
ProjectFactory --> Project : creates
QuestionFactory --> Question : creates
ProjectQuestion -up-|> Question
ProjectQuestion o- ProjectId
ProjectQuestion o-- Answer
SelectionStrategy -right-o ProjectQuestion
SelectionStrategyImpl -up-|> SelectionStrategy


@enduml